--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   <div>
                     <div class="card w-96 bg-base-100 shadow-xl">
                       <figure class="px-10 pt-10">
-                        <img src="/images//fruit9.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
                       </figure>
                       <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
