--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
           <div class="flex p-1">
             <div class="w-10 rounded-full">
-               <img src="/images//logo.png" />
+               <img src="./images/logo.png" />
             </div>
             <a class="btn btn-ghost normal-case text-xl">Fruit Brust</a>
         </div>
@@ -36,7 +36,7 @@
             <section>
               <div class="carousel min-h-[calc(100vh-60)]">
                 <div id="slide1" class="carousel-item relative w-full">
-                  <img src="/images//banner1.png" class="w-full" />
+                  <img src="./images/banner1.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide4" class="btn btn-circle">❮</a>
                      <div class="text-center text-white">
@@ -48,7 +48,7 @@
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                  <img src="/images//banner2.png" class="w-full" />
+                  <img src="./images/banner2.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide1" class="btn btn-circle">❮</a> 
                       <div class="text-center text-white">
@@ -60,7 +60,7 @@
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full">
-                  <img src="/images//banner3.png" class="w-full" />
+                  <img src="./images/banner3.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide2" class="btn btn-circle">❮</a>
                     <div class="text-center text-white">
@@ -72,7 +72,7 @@
                   </div>
                 </div> 
                 <div id="slide4" class="carousel-item relative w-full">
-                  <img src="/images//banner4.png" class="w-full" />
+                  <img src="./images/banner4.png" class="w-full" />
                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a href="#slide3" class="btn btn-circle">❮</a> 
                     <div class="text-center text-white">
@@ -132,7 +132,7 @@
                   <div>
                     <div class="card w-96 bg-base-100 shadow-xl">
                       <figure class="px-10 pt-10">
-                        <img src="/images//fruit6.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
                       </figure>
                       <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -146,7 +146,7 @@
                   <div>
                     <div class="card w-96 bg-base-100 shadow-xl">
                       <figure class="px-10 pt-10">
-                        <img src="/images//fruit7.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
                       </figure>
                       <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -160,7 +160,7 @@
                   <div>
                     <div class="card w-96 bg-base-100 shadow-xl">
                       <figure class="px-10 pt-10">
-                        <img src="/images//fruit8.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
                       </figure>
                       <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
