--- a/index.html
+++ b/index.html
@@ -180,16 +180,41 @@
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <p>Banana</p>
                         <div class="card-actions">
-                          <button class="btn text-orange-600">Details</button>
+                          <!-- Open the modal using ID.showModal() method -->
+                            <button class="btn text-orange-600" onclick="my_modal_5.showModal()">Details</button>
+                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                            <form method="dialog" class="modal-box">
+                              <img src="./images/fruit9.png" alt="">
+                            <h3 class="font-bold text-lg">Banana</h3>
+                             <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                             <div class="rating rating-lg rating-half">
+                              <input type="radio" name="rating-10" class="rating-hidden" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            </div>
+                             <div class="modal-action justify-center">
+                             <!-- if there is a button in form, it will close the modal -->
+                               <button class="btn btn-outline text-orange-600">Close</button>
+                               <button class="btn btn-error text-white">Buy Now</button>
+                             </div>
+                           </form>
+                            </dialog>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div>
-                <button class="btn btn-error">Shop All</button>
-                </div>
-              </div>
+            </section>
+            <section class="justify-center flex">
+              <button class="btn btn-error">Shop All</button>
             </section>
          </main>
     </header>
