--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 </div>
               </div>
             </section>
-
-            <!-- Deal of the day -->
+            <section class="md:px-16 lg:px-24">
+              <!-- Deal of the day -->
             <section class="max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-8 my-10 bg-gray flex">
               <div class="">
                 <div class="flex justify-around">
@@ -138,7 +138,33 @@
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <p>Apples</p>
                         <div class="card-actions">
-                          <button class="btn text-orange-600">Details</button>
+                          <!-- Open the modal using ID.showModal() method -->
+                          <button class="btn text-orange-600" onclick="my_modal_8.showModal()">Details</button>
+                          <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
+                          <form method="dialog" class="modal-box">
+                            <img src="./images/fruit6.png" alt="">
+                            <h3 class="font-bold text-lg">Apples</h3>
+                            <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                           <div class="rating rating-lg rating-half">
+                            <input type="radio" name="rating-10" class="rating-hidden" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                          </div>
+                           <div class="modal-action justify-center">
+                           <!-- if there is a button in form, it will close the modal -->
+                             <button class="btn btn-outline text-orange-600">Close</button>
+                             <button class="btn btn-error text-white">Buy Now</button>
+                           </div>
+                         </form>
+                          </dialog>
                         </div>
                       </div>
                     </div>
@@ -152,7 +178,33 @@
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <p>Orange</p>
                         <div class="card-actions">
-                          <button class="btn text-orange-600">Details</button>
+                          <!-- Open the modal using ID.showModal() method -->
+                          <button class="btn text-orange-600" onclick="my_modal_2.showModal()">Details</button>
+                          <dialog id="my_modal_2" class="modal modal-bottom sm:modal-middle">
+                          <form method="dialog" class="modal-box">
+                            <img src="./images/fruit7.png" alt="">
+                            <h3 class="font-bold text-lg">Orange</h3>
+                            <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                           <div class="rating rating-lg rating-half">
+                            <input type="radio" name="rating-10" class="rating-hidden" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                          </div>
+                           <div class="modal-action justify-center">
+                           <!-- if there is a button in form, it will close the modal -->
+                             <button class="btn btn-outline text-orange-600">Close</button>
+                             <button class="btn btn-error text-white">Buy Now</button>
+                           </div>
+                         </form>
+                          </dialog>
                         </div>
                       </div>
                     </div>
@@ -166,7 +218,33 @@
                         <h2 class="card-title">12.90$ - 18.85$</h2>
                         <p>Red Dragon</p>
                         <div class="card-actions">
-                          <button class="btn text-orange-600">Details</button>
+                          <!-- Open the modal using ID.showModal() method -->
+                            <button class="btn text-orange-600" onclick="my_modal_1.showModal()">Details</button>
+                            <dialog id="my_modal_1" class="modal">
+                            <form method="dialog" class="modal-box">
+                              <img src="./images/fruit8.png" alt="">
+                            <h3 class="font-bold text-lg">Red Dragon</h3>
+                            <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                            <div class="rating rating-lg rating-half">
+                              <input type="radio" name="rating-10" class="rating-hidden" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" checked />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
+                              <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-2" />
+                            </div>
+                            <div class="modal-action justify-center">
+                             <!-- if there is a button in form, it will close the modal -->
+                               <button class="btn btn-outline text-orange-600">Close</button>
+                               <button class="btn btn-error text-white">Buy Now</button>
+                            </div>
+                           </form>
+                           </dialog>
                         </div>
                       </div>
                     </div>
@@ -185,8 +263,8 @@
                             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
                             <form method="dialog" class="modal-box">
                               <img src="./images/fruit9.png" alt="">
-                            <h3 class="font-bold text-lg">Banana</h3>
-                             <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                              <h3 class="font-bold text-lg">Banana</h3>
+                              <p class="py-4">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                              <div class="rating rating-lg rating-half">
                               <input type="radio" name="rating-10" class="rating-hidden" />
                               <input type="radio" name="rating-10" class="bg-orange-500 mask mask-star-2 mask-half-1" />
@@ -216,7 +294,19 @@
             <section class="justify-center flex">
               <button class="btn btn-error">Shop All</button>
             </section>
+            </section>
          </main>
+
+         <!-- meat the team section -->
+         <section>
+          <div class="card w-96 bg-base-100 shadow-xl image-full">
+            <figure><img src="./images/banner1.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+            </div>
+          </div>
+         </section>
     </header>
 </body>
 </html>
