--- a/index.html
+++ b/index.html
@@ -304,27 +304,34 @@
             <div class="card-body items-center text-center">
               <h2 class="card-title">Meet the team section</h2>
               <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
-              <div class="space-x-10 px-10 py-8">
-                <div class="avatar">
+              <div class="space-x-10 px-10 py-8 flex">
+                <div class="avatar flex flex-col">
                   <div class="w-12">
                     <img src="./images/member1.png" />
                   </div>
-                  <p>Awlad Hossain</p>
+                  <p class="font-bold">Awlad Hossain</p>
+                  <p>Fruits Expert</p>
                 </div>
-                <div class="avatar">
+                <div class="avatar flex flex-col">
                   <div class="w-12">
                     <img src="./images/member2.png" />
                   </div>
+                  <p class="font-bold">Safia Chowdhury</p>
+                  <p>Fruits Expert</p>
                 </div>
-                <div class="avatar">
+                <div class="avatar flex flex-col">
                   <div class="w-12">
                     <img src="./images/member3.png" />
                   </div>
+                  <p class="font-bold">Rokib Hossain</p>
+                  <p>Fruits Expert</p>
                 </div>
-                <div class="avatar">
+                <div class="avatar flex flex-col ">
                   <div class="w-12">
                     <img src="./images/member4.png" />
                   </div>
+                  <p class="font-bold">Chaity</p>
+                  <p>Fruits Expert</p>
                 </div>
               </div>
             </div>
@@ -339,11 +346,13 @@
     </div>
     <h1 class="font-bold text-white">Fruit Burst</h1>
   </div>
-  <div class="grid grid-flow-col gap-4">
+  <div class="grid grid-flow-col gap-4 text-white">
+    <a href="link link-hover">Home</a>
     <a class="link link-hover">About us</a> 
-    <a class="link link-hover">Contact</a> 
-    <a class="link link-hover">Jobs</a> 
-    <a class="link link-hover">Press kit</a>
+    <a class="link link-hover">Shop</a> 
+    <a class="link link-hover">All Fruits</a> 
+    <a class="link link-hover">Support</a>
+    <a class="link link-hover">My Account</a>
   </div> 
   <div>
     <div class="grid grid-flow-col gap-4">
@@ -352,5 +361,6 @@
       <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
     </div>
   </div>
+    <p class="text-white">Copyright © 2023 - All right reserved by Fruit Brust Company Ltd</p>
 </footer>
 </html>
