--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   </div>
                 </div>
                 <!-- cards -->
-                <div class="flex gap-4 md:px-16 ig:px-24">
+                <div class="flex flex-row-4 items-center gap-5 md:px-16 lg:px-24">
                   <div>
                     <div class="card w-96 bg-base-100 shadow-xl">
                       <figure class="px-10 pt-10">
@@ -298,15 +298,15 @@
          </main>
 
          <!-- meat the team section -->
-         <section class="mt-5">
+         <section class="mt-8">
           <div class="card w-90 h-90 image-full">
             <figure class="opacity-100"><img src="./images/banner1.png" alt="Shoes" /></figure>
             <div class="card-body items-center text-center">
-              <h2 class="card-title">Meet the team section</h2>
+              <h2 class="card-title mt-8">Meet the team section</h2>
               <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
               <div class="space-x-10 px-10 py-8 flex">
                 <div class="avatar flex flex-col">
-                  <div class="w-12">
+                  <div class="w-12 text-center">
                     <img src="./images/member1.png" />
                   </div>
                   <p class="font-bold">Awlad Hossain</p>
